Changed manpage - still draft

--- a/sutra.1
+++ b/sutra.1
@@ -1,4 +1,4 @@
-.TH "./sutra" "1" "2014 02 25" "sea"
+.TH "./sutra" "1" "2014 02 25" "sea (erat.simon@gmail.com)"
 
 .SH NAME
 ./sutra (0.1)
@@ -9,10 +9,10 @@
 Example: ./sutra 
 .br
 Where options are:
-.IP "\fB-XY\fP"
-does this
-.IP "\fB-YX\fP"
-does that
+.IP "\fB-h|help\fP"
+This screen
+.IP "\fB-a|about\fP"
+Prints an overview of installed langauges, their books, chapters and amount of verses.
 
 .SH DESCRIPTION
 .PP
