--- a/lang/German/Bhagavad-Gita/Auf dem Schlachtfeld von Kuruksetra/1.1
+++ b/lang/German/Bhagavad-Gita/Auf dem Schlachtfeld von Kuruksetra/1.1
@@ -1,1 +1,1 @@
-Dhrtarastra sprach: O Sañjaya, was taten meine Söhne und die Sähne Pandus als sie sich an der Pilgerstätte von Kuruksetra voller Kampflust versammelt hatten?
+Dhrtarastra sprach: O Sañjaya, was taten meine Söhne und die Söhne Pandus als sie sich an der Pilgerstätte von Kuruksetra voller Kampflust versammelt hatten?
