Importet parts of chapter 1 & 2 of previous attempts

--- a/lang/GERMAN/Bhagavad-Gita/BG_2_Zusammenfassung_des_Inhalts_der_Gita.txt
+++ b/lang/GERMAN/Bhagavad-Gita/BG_2_Zusammenfassung_des_Inhalts_der_Gita.txt
@@ -1,1 +1,13 @@
+
+
+
+
+
+
+
+
+
+
+
+Niemals gab es eine Zeit, als Ich oder du oder all diese Könige nicht existierten, und ebenso wird niemals in der Zukunft einer von uns aufhören zu sein.
 So wie die verkörperte Seele n diesem Körper fortgesetzt von Knabenzeit zur Jugend und zu Alter wandert, so geht die Seele beim Tod in ählicher Weise in einen anderen Körper ein. Ein besonnener Mensch wird durch einen solchen Wechsel nicht verwirrt.
