--- a/lang/GERMAN/Bhagavad-Gita/BG_10_Die_Füllen_des_Absoluten.txt
+++ b/lang/GERMAN/Bhagavad-Gita/BG_10_Die_Füllen_des_Absoluten.txt
@@ -1,42 +1,42 @@
-Die Höchste Persönlichkeit Gottes sprach: Höre weiter, o starkarmiger Arjuna. Weil du mein geliebter Freund bist, werde Ich zu deinem Nutzen weitersprechen und dir Wissen offenbaren, das alles bisher Gesagte übertrifft.
-Weder die Scharen der Halbgötter noch die grossen Weisen kennen meinen Ursprung und Meine Füllen, denn Ich bin in jeder Hinsicht der Ursprung der Halbgötter und Weisen.
-Nur derjenige unter den Menschen, der frei von Täuschung ist und Mich als den Ungeborenen, den Anfanglosen und den Höchsten Herrn aller Welten kennt, ist von allen Sünden befreit.
-Intelligenz, Wissen, Freiheit von Zweifeln und Täuschung, Nachsicht, Wahrhaftigkeit, Beherrschung der Sinne, Beherrschung des Geistes, Glück und Leid, Geburt, Tod, Furcht, Furchtlosigkeit, Gewaltlosigkeit,
-Ausgeglichenheit, Zufriedenheit, Entsagung, Wohltätigkeit, Ruhm und Schmach - all diese verschiedenen Eigenschaften der Lebewesen wurden von Mir allein geschaffen.
-Die sieben grossen Weisen, vor ihnen die vier anderen grossen Weisen und die Manus (die Vorväter der Menschheit) wurden von Mir, aus Meinem Geist, geboren und alle Lebewesen, die die verschiedenen Planeten bevölkern, stammen von ihnen ab.
-Wer von diesen Meinen Füllen und mystischen Kräften tatsächlich überzeugt ist, beschäftigt sich im unvermischten hingebungsvollen Dienst; darüber besteht kein Zweifel.
-Ich bin der Ursprung aller spirituellen und materiellen Welten. Alles geht von Mir aus. Die Weisen, die dies vollkommen verstanden haben, beschäftigen sich in Meinem hingebungsvollen Dienst und verehren Mich von ganzem Herzen.
-Die Gedanken Meiner reinen Geweihten weilen in Mir, ihr Leben ist völlig Meinem Dienst hingegeben, und sie erfahren grosse Zufriedenheit und Glückseligkeit, indem sie sich ständig gegenseitig erleuchten und über Mich sprechen.
-Denjenigen, die Mir ständig hingegeben sind und Mir mit Liebe dienen, gebe Ich das Verständnis, durch das sie zu Mir gelangen können.
-Um ihnen besondere Barmherzigkeit zu erweisen, zerstöre Ich, der Ich in Ihren Herzen weile, mit der leuchtenden Fackel des Wissens die aus Unwissenheit geborene Finsternis.
-Arjuna sprach: Du bist die Höchste Persönlichkeit Gottes, das höchste Reich, der Reinste, die Absolute Wahrheit. Du bist die ewige, transzendentale, ursprüngliche Person, der Ungeborene, der Grösste.
-Alle bedeutenden Weisen, wie Narada, Asita, Devala und Vyasa, bestätigen diese Wahrheit über Dich, und jetzt erklärst Du es mir Selbst.
-O Krsna, alles, was Du mir gesagt hast, akzeptiere ich vollkommen als Wahrheit. Weder die Halbgötter noch die Dämonen, o Herr, können Deine Persönlichkeit verstehen.
-Wahrlich, Du allein kennst Dich durch Deine innere Energie, o Höchste Person, Ursprung von allem, Herr aller Wesen, Gott der Götter, Herr des Universums!
-Bitte beschreibe mir im einzelnen Deine göttlichen Kräfte, mit denen Du all diese Welten durchdringst.
-O Krshna, o höchster Mystiker, wie soll ich ständig an Dich denken, und wie soll ich Dich verstehen? An welche Deiner mannigfaltigen Formen soll man sich erinnern, o Höchste Persönlichkeit Gottes?
-O Janardana, bitte beschreibe mir abermals im einzelnen die mystische Kraft Deiner Füllen. Ich werde es niemals müde, über Dich zu hören, denn je mehr ich höre, desto mehr möchte ich den Nektar Deiner Worte kosten.
-Die Höchste Persönlichkeit Gottes sprach: Ja, Ich werde dir von Meinen herrlichen Manifestationen berichten, doch nur von den bedeutendsten, o Arjuna, denn Meine Füllen sind grenzenlos.
-Ich bin die überseele, o Arjuna, die in den Herzen aller Lebewesen weilt. Ich bin der Anfang, die Mitte und das Ende aller Wesen.
+Die HÃ¶chste PersÃ¶nlichkeit Gottes sprach: HÃ¶re weiter, o starkarmiger Arjuna. Weil du mein geliebter Freund bist, werde Ich zu deinem Nutzen weitersprechen und dir Wissen offenbaren, das alles bisher Gesagte Ã¼bertrifft.
+Weder die Scharen der HalbgÃ¶tter noch die grossen Weisen kennen meinen Ursprung und Meine FÃ¼llen, denn Ich bin in jeder Hinsicht der Ursprung der HalbgÃ¶tter und Weisen.
+Nur derjenige unter den Menschen, der frei von TÃ¤uschung ist und Mich als den Ungeborenen, den Anfanglosen und den HÃ¶chsten Herrn aller Welten kennt, ist von allen SÃ¼nden befreit.
+Intelligenz, Wissen, Freiheit von Zweifeln und TÃ¤uschung, Nachsicht, Wahrhaftigkeit, Beherrschung der Sinne, Beherrschung des Geistes, GlÃ¼ck und Leid, Geburt, Tod, Furcht, Furchtlosigkeit, Gewaltlosigkeit,
+Ausgeglichenheit, Zufriedenheit, Entsagung, WohltÃ¤tigkeit, Ruhm und Schmach - all diese verschiedenen Eigenschaften der Lebewesen wurden von Mir allein geschaffen.
+Die sieben grossen Weisen, vor ihnen die vier anderen grossen Weisen und die Manus (die VorvÃ¤ter der Menschheit) wurden von Mir, aus Meinem Geist, geboren und alle Lebewesen, die die verschiedenen Planeten bevÃ¶lkern, stammen von ihnen ab.
+Wer von diesen Meinen FÃ¼llen und mystischen KrÃ¤ften tatsÃ¤chlich Ã¼berzeugt ist, beschÃ¤ftigt sich im unvermischten hingebungsvollen Dienst; darÃ¼ber besteht kein Zweifel.
+Ich bin der Ursprung aller spirituellen und materiellen Welten. Alles geht von Mir aus. Die Weisen, die dies vollkommen verstanden haben, beschÃ¤ftigen sich in Meinem hingebungsvollen Dienst und verehren Mich von ganzem Herzen.
+Die Gedanken Meiner reinen Geweihten weilen in Mir, ihr Leben ist vÃ¶llig Meinem Dienst hingegeben, und sie erfahren grosse Zufriedenheit und GlÃ¼ckseligkeit, indem sie sich stÃ¤ndig gegenseitig erleuchten und Ã¼ber Mich sprechen.
+Denjenigen, die Mir stÃ¤ndig hingegeben sind und Mir mit Liebe dienen, gebe Ich das VerstÃ¤ndnis, durch das sie zu Mir gelangen kÃ¶nnen.
+Um ihnen besondere Barmherzigkeit zu erweisen, zerstÃ¶re Ich, der Ich in Ihren Herzen weile, mit der leuchtenden Fackel des Wissens die aus Unwissenheit geborene Finsternis.
+Arjuna sprach: Du bist die HÃ¶chste PersÃ¶nlichkeit Gottes, das hÃ¶chste Reich, der Reinste, die Absolute Wahrheit. Du bist die ewige, transzendentale, ursprÃ¼ngliche Person, der Ungeborene, der GrÃ¶sste.
+Alle bedeutenden Weisen, wie Narada, Asita, Devala und Vyasa, bestÃ¤tigen diese Wahrheit Ã¼ber Dich, und jetzt erklÃ¤rst Du es mir Selbst.
+O Krsna, alles, was Du mir gesagt hast, akzeptiere ich vollkommen als Wahrheit. Weder die HalbgÃ¶tter noch die DÃ¤monen, o Herr, kÃ¶nnen Deine PersÃ¶nlichkeit verstehen.
+Wahrlich, Du allein kennst Dich durch Deine innere Energie, o HÃ¶chste Person, Ursprung von allem, Herr aller Wesen, Gott der GÃ¶tter, Herr des Universums!
+Bitte beschreibe mir im einzelnen Deine gÃ¶ttlichen KrÃ¤fte, mit denen Du all diese Welten durchdringst.
+O Krshna, o hÃ¶chster Mystiker, wie soll ich stÃ¤ndig an Dich denken, und wie soll ich Dich verstehen? An welche Deiner mannigfaltigen Formen soll man sich erinnern, o HÃ¶chste PersÃ¶nlichkeit Gottes?
+O Janardana, bitte beschreibe mir abermals im einzelnen die mystische Kraft Deiner FÃ¼llen. Ich werde es niemals mÃ¼de, Ã¼ber Dich zu hÃ¶ren, denn je mehr ich hÃ¶re, desto mehr mÃ¶chte ich den Nektar Deiner Worte kosten.
+Die HÃ¶chste PersÃ¶nlichkeit Gottes sprach: Ja, Ich werde dir von Meinen herrlichen Manifestationen berichten, doch nur von den bedeutendsten, o Arjuna, denn Meine FÃ¼llen sind grenzenlos.
+Ich bin die Ã¼berseele, o Arjuna, die in den Herzen aller Lebewesen weilt. Ich bin der Anfang, die Mitte und das Ende aller Wesen.
 Von den Adityas bin Ich Visnu, von den Lichtquellen bin Ich die strahlende Sonne, von den Maruts bin Ich Marici, und unter den Sternen bin Ich der Mond.
-Von den Veden bin Ich der Sama Veda; von den Halbgöttern bin Ich Indra, der König des Himmels; von den Sinnen bin Ich der Geist, und in den Lebewesen bin Ich die Lebenskraft (Bewusstsein).
+Von den Veden bin Ich der Sama Veda; von den HalbgÃ¶ttern bin Ich Indra, der KÃ¶nig des Himmels; von den Sinnen bin Ich der Geist, und in den Lebewesen bin Ich die Lebenskraft (Bewusstsein).
 Von allen Rudras bin Ich Siva, von den Yaksas und Raksasas bin Ich der Herr des Reichtums (Kuvera), von den Vasus bin Ich das Feuer (Agni), und von den Bergen bin Ich Meru.
-Wisse, o Arjuna, von den Priestern bin Ich das Oberhaupt, Brhaspati. Von den Generälen bin Ich Kartikeya, und von den Gewässern bin Ich der Ozean.
+Wisse, o Arjuna, von den Priestern bin Ich das Oberhaupt, Brhaspati. Von den GenerÃ¤len bin Ich Kartikeya, und von den GewÃ¤ssern bin Ich der Ozean.
 Von den grossen Weisen bin Ich Bhrgu; von den Klangschwingungen bin Ich das transzendentale om. Von den Opfern bin Ich das Chanten der Heiligen Namen (japa), und von den unbeweglichen Dingen bin Ich der Himalaya.
-Voan allen Bäumen bin Ich der Banyanbaum, und von den Weisen unter den Halbgöttern bin Ich Narada. Von den Gandharvas bin Ich Citraratha, und von den vollkommenen Wesen bin Ich der Weise Kapila.
-Wisse, von den Pferden bin Ich Uccaihsrava, der aus dem Ozean geboren wurde, als dieser um der Erzeugung von Nektar willen gequirlt wurde. Von den Elefantenfürsten bin Ich Airavatam, und unter den Menschen bin Ich der Monarch.
-Von den Waffen bin Ich der Donnerkeil; von den Kühen bin Ich die surabhi. Von der Ursachen der Zeugung bin Ich Kandarpa, der Liebesgott, und von den Schlangen bin Ich Vasuki.
-Von den vielköpfigen Nagas bin Ich Ananta, und unter den Wasserlebewesen bin Ich der Halbgott Varuna. Von den verstorbenen Vorfahren bin Ich Aryama, und von den Rechtsprechern bin Ich Yama, der Herr des Todes.
-Von den Daitya-Dämonen bin Ich der hingegebene Prahlada, unter den Bezwingern bin Ich die Zeit, unter den wilden Tieren bin Ich der Löwe, und unter den Vögeln bin Ich Garuda.
-Von den reinigenden Kräften bin Ich der Wind, von den Waffenträgern bin Ich Rama, von den Fischen bin Ich der Hai, und von den strömenden Flüssen bin Ich der Ganges.
-Von allen Schöpfungen bin Ich der Anfang, das Ende und auch die Mitte, o Arjuna. Von allen Wissenschaften bin Ich die spirituelle Wissenschaft des Selbst, und unter den Logikern bin Ich die schlüssige Wahrheit.
-Von den Buchstaben bin Ich der Buchstabe A, und von den zusammengesetzten Wörtern bin Ich das Doppelwort. Ich bin die unerschöpfliche Zeit, und von den Schöpfern bin Ich Brahma.
-Ich bin der allesverschlingende Tod, und Ich bin das erzeugende Prinzip von allem, was in der Zukunft existieren wird. Unter den Frauen bin Ich Ruhm, Glück, erlesene Sprache, Gedächtnis, Intelligenz, Standhaftigkeit und Geduld.
-Von den Hymnen im Sama Veda bin Ich der Brhat-sama, und von aller Dichtung bin Ich der Gayatri. Von den Monaten bin Ich Margasirsa (November - Dezember), und von den Jahreszeiten bin Ich der blumenreiche Frühling.
-Von allem Betrug bin Ich das Glücksspiel, und von allem Prachtvollen bin Ich die Pracht. Ich bin der Sieg. Ich bin das Abenteuer, und Ich bin die Stärke der Starken.
+Voan allen BÃ¤umen bin Ich der Banyanbaum, und von den Weisen unter den HalbgÃ¶ttern bin Ich Narada. Von den Gandharvas bin Ich Citraratha, und von den vollkommenen Wesen bin Ich der Weise Kapila.
+Wisse, von den Pferden bin Ich Uccaihsrava, der aus dem Ozean geboren wurde, als dieser um der Erzeugung von Nektar willen gequirlt wurde. Von den ElefantenfÃ¼rsten bin Ich Airavatam, und unter den Menschen bin Ich der Monarch.
+Von den Waffen bin Ich der Donnerkeil; von den KÃ¼hen bin Ich die surabhi. Von der Ursachen der Zeugung bin Ich Kandarpa, der Liebesgott, und von den Schlangen bin Ich Vasuki.
+Von den vielkÃ¶pfigen Nagas bin Ich Ananta, und unter den Wasserlebewesen bin Ich der Halbgott Varuna. Von den verstorbenen Vorfahren bin Ich Aryama, und von den Rechtsprechern bin Ich Yama, der Herr des Todes.
+Von den Daitya-DÃ¤monen bin Ich der hingegebene Prahlada, unter den Bezwingern bin Ich die Zeit, unter den wilden Tieren bin Ich der LÃ¶we, und unter den VÃ¶geln bin Ich Garuda.
+Von den reinigenden KrÃ¤ften bin Ich der Wind, von den WaffentrÃ¤gern bin Ich Rama, von den Fischen bin Ich der Hai, und von den strÃ¶menden FlÃ¼ssen bin Ich der Ganges.
+Von allen SchÃ¶pfungen bin Ich der Anfang, das Ende und auch die Mitte, o Arjuna. Von allen Wissenschaften bin Ich die spirituelle Wissenschaft des Selbst, und unter den Logikern bin Ich die schlÃ¼ssige Wahrheit.
+Von den Buchstaben bin Ich der Buchstabe A, und von den zusammengesetzten WÃ¶rtern bin Ich das Doppelwort. Ich bin die unerschÃ¶pfliche Zeit, und von den SchÃ¶pfern bin Ich Brahma.
+Ich bin der allesverschlingende Tod, und Ich bin das erzeugende Prinzip von allem, was in der Zukunft existieren wird. Unter den Frauen bin Ich Ruhm, GlÃ¼ck, erlesene Sprache, GedÃ¤chtnis, Intelligenz, Standhaftigkeit und Geduld.
+Von den Hymnen im Sama Veda bin Ich der Brhat-sama, und von aller Dichtung bin Ich der Gayatri. Von den Monaten bin Ich Margasirsa (November - Dezember), und von den Jahreszeiten bin Ich der blumenreiche FrÃ¼hling.
+Von allem Betrug bin Ich das GlÃ¼cksspiel, und von allem Prachtvollen bin Ich die Pracht. Ich bin der Sieg. Ich bin das Abenteuer, und Ich bin die StÃ¤rke der Starken.
 Von den Nachkommen Vrsnis bin Ich Vasudeva, und von den Pandavas bin Ich Arjuna. Von den Weisen bin Ich Vyasa, und unter den grossen Denkern bin Ich Usana.
-Unter allen Mitteln, um Gesetzlosigkeit zu bekämpfen, bin Ich die Bestrafung, und in denjenigen, die nach Sieg streben, bin Ich die Moral. Von den Geheimnissen bin Ich das Schweigen, und von den Weisen bin Ich die Weisheit.
-Des weiteren, o Arjuna, bin Ich der ursprüngliche Same aller Schöpfung. Es gibt kein Geschöpf - ob beweglich oder unbeweglich -, das ohne Mich existieren kann.
-O mächtiger Bezwinger der Feinde, Meine göttlichen Manifestationen haben kein Ende. Was Ich dir beschrieben habe, ist nur ein kleiner Hinweis auf Meine unendlichen Füllen.
-Wisse, dass alle majestätischen, schönen und herrlichen Schöpfungen nur einem Funken Meiner Pracht entspringen.
+Unter allen Mitteln, um Gesetzlosigkeit zu bekÃ¤mpfen, bin Ich die Bestrafung, und in denjenigen, die nach Sieg streben, bin Ich die Moral. Von den Geheimnissen bin Ich das Schweigen, und von den Weisen bin Ich die Weisheit.
+Des weiteren, o Arjuna, bin Ich der ursprÃ¼ngliche Same aller SchÃ¶pfung. Es gibt kein GeschÃ¶pf - ob beweglich oder unbeweglich -, das ohne Mich existieren kann.
+O mÃ¤chtiger Bezwinger der Feinde, Meine gÃ¶ttlichen Manifestationen haben kein Ende. Was Ich dir beschrieben habe, ist nur ein kleiner Hinweis auf Meine unendlichen FÃ¼llen.
+Wisse, dass alle majestÃ¤tischen, schÃ¶nen und herrlichen SchÃ¶pfungen nur einem Funken Meiner Pracht entspringen.
 Doch wozu, o Arjuna, ist all dieses detailierte Wissen notwendig? Mit einem einzigen Bruchteil Meinerselbst durchdringe und erhalte Ich das gesamte Universum.
